Fixed margins of piecemeals

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -38,4 +38,8 @@
   .embed-fragment {
     margin-bottom: 0;
   }
+  .is-piecemeal>.Block-content {
+    margin-top: 50vh;
+    margin-bottom: 50vh;
+  }
 }
