--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -7,7 +7,7 @@
   height: 100%;
   min-height: 320px;
   // background-color: #ffc100;
-  background-color: #111;
+  background-color: #f9f9f9;
   // background: url(https://i.ytimg.com/vi/vFPWVCbDqTc/maxresdefault.jpg) no-repeat center center scroll;
   // -webkit-background-size: cover;
   // -moz-background-size: cover;
