--- a/src/components/Globe.scss
+++ b/src/components/Globe.scss
@@ -16,7 +16,7 @@
   padding-bottom: 100%;
   /* override this inline for aspect ratio other than square */
 }
-.scaling-canvas {
+.scaling-globe {
   // position: absolute;
   // height: 100%;
   width: 100%;
