move to load external data

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -47,8 +47,9 @@
   .embed-fragment {
     margin-bottom: 0;
   }
+  // Space out content
   .is-piecemeal>.Block-content {
-    margin-top: 50vh;
-    margin-bottom: 50vh;
+    margin-top: 52vh;
+    margin-bottom: 52vh;
   }
 }
